--- a/exercícios módulo 4/ex026/mq005/index.html
+++ b/exercícios módulo 4/ex026/mq005/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -30,5 +32,14 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, eum quos. Accusantium repudiandae molestiae, officia nisi iusto ipsa velit consectetur fuga modi impedit, provident quibusdam magni optio exercitationem quos. Aperiam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, veritatis qui beatae porro quam ducimus. Illum enim sed labore mollitia ipsam ex aspernatur fugit voluptatum consequuntur perspiciatis, excepturi nesciunt? Pariatur! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, earum sit dolores nihil laudantium veniam mollitia error quisquam placeat? Mollitia neque esse rem sint eveniet facilis optio, modi libero quia!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
